--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.1",
     "postcss-loader": "^7.3.0",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
