--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.0",
+    "postcss-url": "^10.1.3",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2"
